<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iconEvent1View"
        android:layout_width="129dp"
        android:layout_height="115dp"
        android:contentDescription="@string/icon1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/event1Button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156"
        app:srcCompat="@drawable/swim" />

    <Button
        android:id="@+id/event1Button"
        android:layout_width="275dp"
        android:layout_height="115dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="#F5DC52"
        android:text="@string/women_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <ImageView
        android:id="@+id/iconEvent2View"
        android:layout_width="131dp"
        android:layout_height="115dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/icon2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconEvent1View"
        app:srcCompat="@drawable/swim" />

    <Button
        android:id="@+id/event2Button"
        android:layout_width="275dp"
        android:layout_height="115dp"
        android:layout_marginTop="12dp"
        android:background="#F5DC52"
        android:text="@string/men_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iconEvent2View"
        app:layout_constraintTop_toBottomOf="@+id/event1Button" />


    <Button
        android:id="@+id/event3Button"
        android:layout_width="275dp"
        android:layout_height="115dp"
        android:layout_marginTop="12dp"
        android:background="#F5DC52"
        android:text="@string/medley_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iconEvent2View"
        app:layout_constraintTop_toBottomOf="@+id/event2Button"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iconEvent3View"
        android:layout_width="131dp"
        android:layout_height="115dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="184dp"
        android:contentDescription="@string/icon3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconEvent2View"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/swim" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="413dp"
        android:layout_height="340dp"
        android:layout_marginTop="456dp"
        android:contentDescription="@string/pool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pool" />

    <TextView
        android:id="@+id/ourJouney"
        android:layout_width="411dp"
        android:layout_height="78dp"
        android:gravity="center"
        android:text="@string/projectName"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />
</androidx.constraintlayout.widget.ConstraintLayout>